# oapi_universal_gen

./: .gitignore  Cargo.toml  generated_code_debug.txt
examples/: debug_gen.rs  debug_structs.rs
schemas/: enum_test.json
src/: lib.rs  oapi_gen.rs
src/backends/: ehttp.rs  mod.rs  reqwest.rs
src/oapi_gen/: generator.rs  methods.rs  mod.rs  schemas.rs  types.rs  utils.rs
tests/: oapi_gen.rs  uri.rs  url_builder_tests.rs
tests/compile_test/: Cargo.toml  build.rs
tests/compile_test/src/: generated_api.rs  main.rs
tests/fixtures/: comprehensive_api.json  enums_only.json  full_api.json  minimal.json  mixed_required_optional.json  opencode.json  other.json  structs_only.json  with_parameters.json  with_request_body.json  with_responses.json
